--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.11"
 fastapi = "^0.110"
 uvicorn = {extras = ["standard"], version = "^0.28"}
 psycopg2-binary = "^2.9"
+sqlmodel = "^0.0.16"
+alembic = "^1.12"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0"
