--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "expo": "^49.0.0",
+    "react": "18.2.0",
+    "react-native": "0.72.0",
+    "expo-router": "^3.0.0",
     "expo-speech": "^10.1.0",
     "react-native-voice": "^1.1.10"
   }
